# stl-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt  text_to_stl.py
design/: .$chris stl.drawio.bkp
